# PaperMC-Updater

./: .gitignore  README.md  flags.py  hash.py  install_plugin.py  main.py  paper.py  providers.py  pyproject.toml  server.json  server.json1  todo  update-paper.py  update-plugins.py  updatePlugins.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  plugins.rst  usage.rst
plugins/update/: Info.txt
src/papermc_updater/: base.json  flags.py  hash.py  install_plugin.py  main.py  paper.py  providers.py  updatePlugins.py  vars.py
